Minimize package and update controller
